Implementado servicio de autenticación con: - Modelos: User, Role, Permission, AuditLog - Repositorios: UserRepository, RoleRepository, PermissionRepository, AuditLogRepository - Servicios: UserService, RoleService, PermissionService, AuditService - Seguridad: JwtTokenProvider, JwtAuthenticationFilter, CustomUserDetailsService - DTOs: AuthRequest, AuthResponse, UserDto - Controllers: AuthController, RoleController, PermissionController - Configuración: SecurityConfig, InitialDataConfig